Fixed: opened folders scrolling out of view on bottom displays line

--- a/contentcuration/contentcuration/static/less/content-container.less
+++ b/contentcuration/contentcuration/static/less/content-container.less
@@ -59,6 +59,9 @@
 			background-color:white;
 			visibility:hidden;
 		}
+		.bottom_border{
+			margin-top:@container-height * 0.98;
+		}
 
 		
 		h2{
